correction contrast bg

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,7 +9,7 @@
 }
 .log_container_section {
   margin: auto;
-  background: rgba(255, 255, 255, 0.12);
+  background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(5px);
   border-radius: 0.5rem;
   padding: 2rem 2rem 2rem 2rem;
