--- a/src/styles/sass/_variables.scss
+++ b/src/styles/sass/_variables.scss
@@ -2,5 +2,5 @@ $primary-clr: #167899;
 $secondary-clr: #82bacd;
 $tertiary-clr:  #414141;
 
-$bg-section: rgba(255, 255, 255, 0.12);
+$bg-section: rgba(255, 255, 255, 0.2);
 $text-btn-logindex-clr: white;
